--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 order-2 order-lg-1 mt_md--40 mt_sm--40">
-                <div class="inner text-left">
+                <div class="">
                     <h1 class="title center theme-gradient display-two" style="font-size: 65px;" >Lorem ipsum dolor sit am.
                         <span class="header-caption">
                             <span class="cd-headline clip is-full-width">
